--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,3 +1,19 @@
 textarea {
     min-height: 400px;
 }
+
+#emails-view > div {
+    border: 1px solid black;
+
+}
+
+#emails-view > div > span {
+    margin-left: 5px;
+    margin-right: 5px;
+
+}
+
+#display-email > div > span {
+    white-space: nowrap;
+
+}
